Fixed drag preview image when settings are collapsed

--- a/styles/components/organisms/_ui.scss
+++ b/styles/components/organisms/_ui.scss
@@ -90,6 +90,12 @@
 
     .settings {
         margin: 8px;
+        display: none;
+    }
+    .open .settings,
+    .is-opening .settings,
+    .is-closing .settings{
+        display: block;
     }
 }
 
